--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ li {
 
 /* page-style */
 .container {
-    background: url('./images/IMG_05563.png') fixed no-repeat center, center;
+    background: url('IMG_05563.png') fixed no-repeat center, center;
     background-size: cover;
     font-family: "MS P明朝", sans-serif;
     color: #FFFFFF;
