--- a/style.css
+++ b/style.css
@@ -12,37 +12,46 @@ li {
 
 /* page-style */
 .container {
-    font-family: "MS P明朝", sans-serif;
-    color: #FFFFFF;
+    color: #fff;
     text-align: center;
-    padding:0 50px;
-}
-
-/* parallax */
-.parallax::before {
-    content: "";
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background-image: url('https://github.com/kazumakabashima/komisancafe/blob/main/IMG_05563.png?raw=true');
+    background-image: url('images/IMG_05563.png');
+    background-repeat: no-repeat;
+    background-position: center, center;
+    background-attachment: fixed;
     background-size: cover;
 }
-/* ページタイトル */
-.page-title {
-    padding-top:80px;
+
+/* header */
+.header {
+    background-color: #000;
+    color: #fff;
+    padding: 15px;
+    text-align: center;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000; /* 必要に応じてZインデックスを調整してください */
+    font-size: 30px;
+}
+
+/* main */
+/* ページコンテンツのスタイル */
+.main {
+    padding: 150px 20px 150px 20px;
+    background-color:rgba(68, 68, 68, 0.5);
 }
 
 .drink-type, .food-menu {
-    padding: 100px 0 50px 0;
+    margin: 200px 0 50px 0;
 }
 
 li {
     margin-bottom: 40px;
 }
 .footer {
-    margin-top: 300px;
+    background-color: #000;
+}
+
+.menu {
+    color: #eee;
 }
