--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ li {
 .container {
     color: #fff;
     text-align: center;
-    background-image: url('images/IMG_05563.png');
+    background-image: url('https://github.com/kazumakabashima/komisancafe/blob/main/IMG_05563.png?raw=true');
     background-repeat: no-repeat;
     background-position: center, center;
     background-attachment: fixed;
